--- a/package.json
+++ b/package.json
@@ -13,15 +13,14 @@
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/stack": "^6.3.25",
     "@types/react": "~18.2.45",
-    "deprecated-react-native-prop-types": "^5.0.0",
     "expo": "^49.0.23",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.10",
     "react-native-gesture-handler": "~2.12.0",
-    "react-native-screens": "~3.22.0",
-    "react-native-snap-carousel": "^1.3.1",
-    "typescript": "^5.3.0"
+    "react-native-reanimated": "~3.3.0",
+    "react-native-reanimated-carousel": "^3.5.1",
+    "react-native-screens": "~3.22.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
