--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.6.7",
     "expo": "^49.0.23",
     "expo-status-bar": "~1.6.0",
+    "firebase": "^10.10.0",
     "react": "18.2.0",
     "react-native": "0.72.10",
     "react-native-dotenv": "^3.4.11",
