--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo": "^49.0.23",
     "expo-document-picker": "~11.5.4",
     "expo-file-system": "~15.4.5",
+    "expo-linking": "~5.0.2",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.10.0",
     "install": "^0.13.0",
